all sorts of stuff

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -8,4 +8,4 @@
 <p>If there was anything intersting to say, I'd put it here.</p>
 <h2 id="signup">Sign Up</h2>
 <p>To sign up, click the button to get started.</p>
-<p><a class="btn btn-success" href="/app/users/sign_up">Yeah, this button.</a></p>
+<p><%= link_to 'Yeah, this button', new_user_registration_path, class: 'btn btn-success' %></p>
