--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
-<h2>Sign up</h2>
+<div class="grid -center">
+  <div class="cell -6of12">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: 'form') do |f| %>
+        <%= devise_error_messages! %>
+
+        <fieldset class="form-group">
+          <%= f.label :email%>
+          <%= f.email_field :email, autofocus: true, class: 'form-control'  %>
+        </fieldset>
+
+        <fieldset class="form-group">
+          <%= f.label :password  %>
+          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+        </fieldset>
+
+        <fieldset class="form-group">
+          <%= f.label :confirmation %>
+          <%= f.password_field :confirmation, autocomplete: "off", class: 'form-control' %>
+        </fieldset>
+
+        <div class="form-actions">
+          <%= f.submit "Sign up", class: 'btn btn-primary' %>
+        </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
