--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -2,6 +2,7 @@
 
 <h1>Profile</h1>
 <p>
-  <strong>Email/Login:</strong> <%= current_user.email %><br />
-  <strong>Key:</strong> TBD
+  <strong>Login:</strong> <%= current_user.email %><br />
+  <strong>Key:</strong> <%= current_user.identity.hashkey %>
+  <%= link_to 'Regenerate', regenerate_key_path, :method => :post %>
 </p>
