--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,5 +1,5 @@
 <h1>A Content-Oriented API Application</h1>
-<a href="/">Home</a> | <a href="#about">About</a> | <a href="#signup">Sign Up</a><br />
+<a href="/">Home</a> | <a href="#about">About</a> | <%= link_to 'Sign in', new_user_session_path %><br />
 <p>
   This is a proof of concept content-oriented API application. Sign up to receieve a key and use that key to
   create and read content.
